deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-app-service
  namespace: dev
spec:
  selector:
    app: simple-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      #nodePort: 30080  # optional fixed port
  type: ClusterIP # ClusterIP | NodePort
